# kalcatel

./: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.in.in  kalcatel.kdevprj  kalcatel.lsm  kalcatel.spec
admin/: Makefile.common  acinclude.m4.in  am_edit  cvs.sh
debian/: .cvsignore  Makefile.am  changelog  control  copyright  menu  rules
doc/: Makefile.am  kalcatel.1
doc/en/: Makefile.am  index.docbook
kalcatel/: .cvsignore  Makefile.am  alcatelclasses.cpp  alcatelclasses.h  editcontactdialog.cpp  editcontactdialog.h  editeventdialog.cpp  editeventdialog.h  editmessagedialog.cpp  editmessagedialog.h  edittododialog.cpp  edittododialog.h  kalcatel.cpp  kalcatel.desktop  kalcatel.h  kalcatelconfigdialog.cpp  kalcatelconfigdialog.h  kalcateldoc.cpp  kalcateldoc.h  kalcatellistview.cpp  kalcatellistview.h  kalcatelmergedialog.cpp  kalcatelmergedialog.h  kalcateltreeviewitem.cpp  kalcateltreeviewitem.h  kalcatelui.rc  kalcatelview.cpp  kalcatelview.h  kalcatelviewitem.cpp  kalcatelviewitem.h  main.cpp  phonenumbervalidator.cpp  phonenumbervalidator.h  selectcontactdialog.cpp  selectcontactdialog.h  signallabel.cpp  signallabel.h  signalled.cpp  signalled.h  timevalidator.cpp  (+1 more)
kalcatel/alcasync/: .cvsignore  Makefile.am  alcatel.cpp  alcatel.h  charset.cpp  charset.h  common.cpp  common.h  contacts.cpp  contacts.h  logging.cpp  logging.h  mobile.h  mobile_info.cpp  mobile_info.h  modem.cpp  modem.h  pdu.cpp  pdu.h  sms.cpp  sms.h  version.h
kalcatel/images/: Makefile.am
kalcatel/images/battery/: Makefile.am
kalcatel/images/items-16x16/: Makefile.am
kalcatel/images/items-22x22/: Makefile.am
kalcatel/images/items-32x32/: Makefile.am
kalcatel/images/signal/: Makefile.am
kalcatel/info/: Makefile.am  index.html
kalcatel/templates/: cpp_template  header_template
po/: .cvsignore  cs.po
