####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = en 

EXTRA_DIST = kalcatel.1 

install-data-local:
	$(mkinstalldirs) $(mandir)/man1/
	$(INSTALL_DATA) $(srcdir)/kalcatel.1 $(mandir)/man1/kalcatel.1

uninstall-local:
	-rm -f $(mandir)/man1/kalcatel.1

####### kdevelop will overwrite this part!!! (end)############

