####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libalcatool.a

INCLUDES = $(all_includes)

libalcatool_a_METASOURCES = AUTO

libalcatool_a_SOURCES = contacts.cpp sms.cpp pdu.cpp modem.cpp mobile_info.cpp logging.cpp common.cpp charset.cpp alcatel.cpp 


EXTRA_DIST = alcatel.cpp alcatel.h charset.cpp charset.h common.cpp common.h logging.cpp logging.h mobile.h mobile_info.cpp mobile_info.h modem.cpp modem.h pdu.cpp pdu.h sms.cpp sms.h version.h contacts.h contacts.cpp 

####### kdevelop will overwrite this part!!! (end)############
