####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = background.png index.html kdelogo2.png lines.png lines2.png pointers.png shadow1.png tablebg.png title.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/background.png $(kde_datadir)/kalcatel/info/background.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/index.html $(kde_datadir)/kalcatel/info/index.html
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/kdelogo2.png $(kde_datadir)/kalcatel/info/kdelogo2.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/lines.png $(kde_datadir)/kalcatel/info/lines.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/lines2.png $(kde_datadir)/kalcatel/info/lines2.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/pointers.png $(kde_datadir)/kalcatel/info/pointers.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/shadow1.png $(kde_datadir)/kalcatel/info/shadow1.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/tablebg.png $(kde_datadir)/kalcatel/info/tablebg.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/info/
	$(INSTALL_DATA) $(srcdir)/title.png $(kde_datadir)/kalcatel/info/title.png

uninstall-local:
	-rm -f $(kde_datadir)/kalcatel/info/background.png
	-rm -f $(kde_datadir)/kalcatel/info/index.html
	-rm -f $(kde_datadir)/kalcatel/info/kdelogo2.png
	-rm -f $(kde_datadir)/kalcatel/info/lines.png
	-rm -f $(kde_datadir)/kalcatel/info/lines2.png
	-rm -f $(kde_datadir)/kalcatel/info/pointers.png
	-rm -f $(kde_datadir)/kalcatel/info/shadow1.png
	-rm -f $(kde_datadir)/kalcatel/info/tablebg.png
	-rm -f $(kde_datadir)/kalcatel/info/title.png

####### kdevelop will overwrite this part!!! (end)############
