####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = battery-00.png battery-33.png battery-66.png battery-99.png battery-__.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/battery-00.png $(kde_datadir)/kalcatel/status/battery-00.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/battery-33.png $(kde_datadir)/kalcatel/status/battery-33.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/battery-66.png $(kde_datadir)/kalcatel/status/battery-66.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/battery-99.png $(kde_datadir)/kalcatel/status/battery-99.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/battery-__.png $(kde_datadir)/kalcatel/status/battery-__.png

uninstall-local:
	-rm -f $(kde_datadir)/kalcatel/status/battery-00.png
	-rm -f $(kde_datadir)/kalcatel/status/battery-33.png
	-rm -f $(kde_datadir)/kalcatel/status/battery-66.png
	-rm -f $(kde_datadir)/kalcatel/status/battery-99.png
	-rm -f $(kde_datadir)/kalcatel/status/battery-__.png

####### kdevelop will overwrite this part!!! (end)############
