####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = calendar.png call-missed.png call-outgoing.png call-received.png call.png contact-mobile.png contact-sim.png contact.png message-read.png message-sent.png message-unread.png message-unsent.png message.png todo.png 

####### kdevelop will overwrite this part!!! (end)############
