####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = calendar.png call-missed.png call-outgoing.png call-received.png call.png contact-mobile.png contact-sim.png contact.png message-read.png message-sent.png message-unread.png message-unsent.png message.png todo.png mobile.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/calendar.png $(kde_datadir)/kalcatel/pics/calendar.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/call-missed.png $(kde_datadir)/kalcatel/pics/call-missed.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/call-outgoing.png $(kde_datadir)/kalcatel/pics/call-outgoing.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/call-received.png $(kde_datadir)/kalcatel/pics/call-received.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/call.png $(kde_datadir)/kalcatel/pics/call.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/contact-mobile.png $(kde_datadir)/kalcatel/pics/contact-mobile.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/contact-sim.png $(kde_datadir)/kalcatel/pics/contact-sim.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/contact.png $(kde_datadir)/kalcatel/pics/contact.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/message-read.png $(kde_datadir)/kalcatel/pics/message-read.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/message-sent.png $(kde_datadir)/kalcatel/pics/message-sent.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/message-unread.png $(kde_datadir)/kalcatel/pics/message-unread.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/message-unsent.png $(kde_datadir)/kalcatel/pics/message-unsent.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/message.png $(kde_datadir)/kalcatel/pics/message.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/todo.png $(kde_datadir)/kalcatel/pics/todo.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/pics/
	$(INSTALL_DATA) $(srcdir)/mobile.png $(kde_datadir)/kalcatel/pics/mobile.png

uninstall-local:
	-rm -f $(kde_datadir)/kalcatel/pics/calendar.png
	-rm -f $(kde_datadir)/kalcatel/pics/call-missed.png
	-rm -f $(kde_datadir)/kalcatel/pics/call-outgoing.png
	-rm -f $(kde_datadir)/kalcatel/pics/call-received.png
	-rm -f $(kde_datadir)/kalcatel/pics/call.png
	-rm -f $(kde_datadir)/kalcatel/pics/contact-mobile.png
	-rm -f $(kde_datadir)/kalcatel/pics/contact-sim.png
	-rm -f $(kde_datadir)/kalcatel/pics/contact.png
	-rm -f $(kde_datadir)/kalcatel/pics/message-read.png
	-rm -f $(kde_datadir)/kalcatel/pics/message-sent.png
	-rm -f $(kde_datadir)/kalcatel/pics/message-unread.png
	-rm -f $(kde_datadir)/kalcatel/pics/message-unsent.png
	-rm -f $(kde_datadir)/kalcatel/pics/message.png
	-rm -f $(kde_datadir)/kalcatel/pics/todo.png
	-rm -f $(kde_datadir)/kalcatel/pics/mobile.png

####### kdevelop will overwrite this part!!! (end)############
