####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = calendar.png call-missed.png call-outgoing.png call-received.png call.png contact-mobile.png contact-sim.png contact.png message-read.png message-sent.png message-unread.png message-unsent.png message.png todo.png mobile.png deleted.png modified.png 

install-data-local:
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/calendar.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-calendar.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/call-missed.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-missed.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/call-outgoing.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-outgoing.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/call-received.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-received.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/call.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-call.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/contact-mobile.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact-mobile.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/contact-sim.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact-sim.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/contact.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/message-read.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-read.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/message-sent.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-sent.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/message-unread.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-unread.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/message-unsent.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-unsent.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/message.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-message.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/todo.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-todo.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/mobile.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-mobile.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/deleted.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-deleted.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/modified.png $(kde_icondir)/hicolor/16x16/actions/kalcatel-modified.png

uninstall-local:
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-calendar.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-missed.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-outgoing.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-call-received.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-call.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact-mobile.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact-sim.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-contact.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-read.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-sent.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-unread.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-message-unsent.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-message.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-todo.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-mobile.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-deleted.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/kalcatel-modified.png

####### kdevelop will overwrite this part!!! (end)############
