####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = calendar.png call.png contact.png message.png mobile.png todo.png contact-mobile.png contact-sim.png commit.png 

install-data-local:
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/calendar.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-calendar.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/call.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-call.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/contact.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/message.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-message.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/mobile.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-mobile.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/todo.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-todo.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/contact-mobile.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact-mobile.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/contact-sim.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact-sim.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/commit.png $(kde_icondir)/hicolor/22x22/actions/kalcatel-commit.png

uninstall-local:
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-calendar.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-call.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-message.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-mobile.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-todo.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact-mobile.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-contact-sim.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/kalcatel-commit.png

####### kdevelop will overwrite this part!!! (end)############
