####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = signal-0.png signal-1.png signal-2.png signal-3.png signal-4.png signal-5.png signal-_.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-0.png $(kde_datadir)/kalcatel/status/signal-0.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-1.png $(kde_datadir)/kalcatel/status/signal-1.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-2.png $(kde_datadir)/kalcatel/status/signal-2.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-3.png $(kde_datadir)/kalcatel/status/signal-3.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-4.png $(kde_datadir)/kalcatel/status/signal-4.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-5.png $(kde_datadir)/kalcatel/status/signal-5.png
	$(mkinstalldirs) $(kde_datadir)/kalcatel/status/
	$(INSTALL_DATA) $(srcdir)/signal-_.png $(kde_datadir)/kalcatel/status/signal-_.png

uninstall-local:
	-rm -f $(kde_datadir)/kalcatel/status/signal-0.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-1.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-2.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-3.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-4.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-5.png
	-rm -f $(kde_datadir)/kalcatel/status/signal-_.png

####### kdevelop will overwrite this part!!! (end)############
